2015-10-03  Barton E. Schaefer  <schaefer@zsh.org>

	* 36766: Src/exec.c: fix incorrect reset of noerrexit during
	"if" conditions

2015-10-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 36760: Src/pattern.c: ensure we don't do anything untoward
	with an already metafied pattern trial match.

2015-10-03  Mikael Magnusson  <mikachu@gmail.com>

	* 36754: Functions/TCP/tcp_open, Functions/TCP/tcp_read,
	Functions/TCP/tcp_send, Functions/TCP/tcp_shoot: Tweak some
	usage output in the tcp_* functions

2015-10-02  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 36732: Completion/Unix/Command/_zsh: support -s and -b,
	and complete script arguments

2015-10-01  Peter Stephenson  <p.stephenson@samsung.com>

	* 36737: Src/pattern.c: Ensure we are not dereferencing
	zero-length unterminated string.

	* 36735: Doc/Zsh/contrib.yo, Functions/Misc/zcalc: ~/.zcalcrc.

	* Andrew Janke: 36729: MACHINES, NEWS, README: fix some typos.

	* 36722: Completion/Unix/Command/_git: allow range to complete
	after ^, taking acoount of backslash quoting.

2015-10-01  Mikael Magnusson  <mikachu@gmail.com>

	* 36709: Doc/Zsh/zle.yo, Functions/Zle/bracketed-paste-url-magic,
	Src/Zle/zle_main.c, Src/Zle/zle_params.c, Src/Zle/zle_thingy.c:
	zle -f from inside widget to set flags and make yank start/end
	zle params writable.

	* 36692: Functions/Zle/bracketed-paste-url-magic: simpler
	alternative for handling pasted urls

2015-09-30  Barton E. Schaefer  <schaefer@zsh.org>

	* users/20672: Src/text.c: missing "do" in gettext2() for "select"
	
	* 36707: Src/exec.c, Src/loop.c: distinguish ERR_RETURN value
	of retflag so that execif() can ignore it in the test sublist

	* cf. 36690: Doc/Zsh/builtins.yo: remove sentence fragment

2015-09-30  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36725: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Compute %b correctly when "git am"-ing onto
	detached heads.

	* 36725: Functions/VCS_Info/Backends/VCS_INFO_get_data_git: